# cusupport

./: README.md
ideation/: CONVERSATION-LOGGING.md  MONITORING-COMPLETE.md  livekit.md  monitoring-usage.md  nvidia-riva.md  pipecat.md
livegen/: .dockerignore  .env.example  .gitignore  .python-version  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_connection.py  test_greeting.py  view_metrics.py
livegen/.github/workflows/: ci.yaml  deploy.yaml
livegen/agent/: Dockerfile
livegen/frontend/: Dockerfile
livegen/k8s/: config.env  deployment.yaml  hpa.yaml  kustomization.yaml  secrets.env  service.yaml
livegen/livekit/: Dockerfile  livekit.yaml
livegen/metrics_data/: <AsyncMock name='mock.sid' id='4638537248'>_1776006093.json  <AsyncMock name='mock.sid' id='4644780752'>_1775998327.json  <AsyncMock name='mock.sid' id='4649547392'>_1775998368.json  <coroutine object Room.sid at 0x110854100>_1776109650.json  <coroutine object Room.sid at 0x110ac0100>_1776006407.json  <coroutine object Room.sid at 0x111040040>_1775998325.json  <coroutine object Room.sid at 0x112190100>_1776111193.json  <coroutine object Room.sid at 0x1123c0040>_1775998348.json  <coroutine object Room.sid at 0x112490040>_1775998406.json  <coroutine object Room.sid at 0x112564100>_1776136884.json  <coroutine object Room.sid at 0x112850100>_1776110720.json  <coroutine object Room.sid at 0x11293c040>_1776109111.json  <coroutine object Room.sid at 0x112cec100>_1776111770.json  <coroutine object Room.sid at 0x112d5c040>_1775998246.json  <coroutine object Room.sid at 0x112f48100>_1776111054.json  <coroutine object Room.sid at 0x1140fc040>_1775998354.json  <coroutine object Room.sid at 0x1141d8100>_1776110894.json  <coroutine object Room.sid at 0x114db0040>_1776108982.json  <coroutine object Room.sid at 0x114f6c100>_1776111084.json
livegen/scripts/: load_test.py  start-all.sh  start.sh  status.sh  stop.sh
livegen/src/: agent.py  models.py  prompts.py
livegen/tests/: test_agent.py
livegen/webembed/: .gitignore  Dockerfile  app-config.ts  package-lock.json
livegen/webembed/app/(app)/: layout.tsx
livegen/webembed/app/api/connection-details/: route.ts
livegen/webembed/components/: welcome.tsx
pipegen/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
pipegen/src/pipegen/: __init__.py  agent.py  history.py  observability.py  prompts.py  services.py  tools.py
